--- a/fy-NL/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fy-NL/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -47,7 +47,7 @@
 12502=Net slagge om jo berjocht as sjabloan te bewarjen.
 
 ## @name NS_MSG_UNABLE_TO_SAVE_DRAFT
-12503=Net slagge om uw berjocht as konsept te bewarjen.
+12503=Net slagge om jo berjocht as konsept te bewarjen.
 
 ## @name NS_MSG_LOAD_ATTACHMNTS
 12504=Bylage lade\u2026
@@ -62,34 +62,34 @@
 12507=Kin net poste nei mear nijshosts. Probearje op 'e nij.
 
 ## @name NS_MSG_ASSEMB_DONE_MSG
-12508=Gearstellen fan berjocht\u2026 Klear
+12508=Opstellen fan berjocht\u2026 Klear
 
 ## @name NS_MSG_ASSEMBLING_MSG
-12509=Gearstellen fan berjocht\u2026
+12509=Opstellen fan berjocht\u2026
 
 ## @name NS_MSG_NO_SENDER
 12510=Der is gjin \u00F4fstjoerder ynsteld. Folje jo e-mailadres yn by de e-mail- & nijsgroepaccountynstellings.
 
 ## @name NS_MSG_NO_RECIPIENTS
-12511=Der binne gjin \u00FBntfangers spesificearre. Fier in \u00FBntfanger of nijsgroep yn yn it adressearingsgebiet.
+12511=Der binne gjin \u00FBntfangers spesifisearre. Fier in \u00FBntfanger of nijsgroep yn yn it adressearingsgebiet.
 
 ## @name NS_MSG_ERROR_WRITING_FILE
 12512=Flater by skriuwen nei it tydlike best\u00E2n.
 
 ## @name NS_ERROR_SENDING_FROM_COMMAND
-12514=Der is in flater bard by it ferstjoeren fan e-mail. De mailtsjinner antwurdde:  %s. Gean nei of jo e-mailadres goed is ynsteld yn jo e-mailynstellings en probearje op 'e nij.
+12514=Der is in flater makke by it ferstjoeren fan e-mail. De mailtsjinner antwurde:  %s. Gean nei oft jo e-mailadres goed is ynsteld yn jo e-mailynstellings en besykje op 'e nij.
 
 ## @name NS_ERROR_SENDING_DATA_COMMAND
-12516=Der is in (SMTP-)flater bard by it ferstjoeren fan e-mail. De tsjinner antwurdde:  %s.
+12516=Der is in (SMTP-)flater makke by it ferstjoeren fan e-mail. De tsjinner antwurde:  %s.
 
 ## @name NS_ERROR_SENDING_MESSAGE
-12517=Der is in flater bard by it ferstjoeren fan e-mail. De mailtsjinner antwurdde:  %s. Kontrolearje it berjocht en probearje op 'e nij.
+12517=Der is in flater makke by it ferstjoeren fan e-mail. De mailtsjinner antwurde:  %s. Kontrolearje it berjocht en besykje op 'e nij.
 
 ## @name NS_ERROR_POST_FAILED
-12518=It berjocht koe net ferstjoerd wurde, omdat it ferbinen mei de nijstsjinner mislearre is. De tsjinner is miskien net beskikber of wegeret ferbinings. Gean nei of jo nijstsjinnerynstellings goed binne en probearje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
+12518=It berjocht koe net ferstjoerd wurde, omdat it ferbinen mei de nijstsjinner mislearre is. De tsjinner is miskien net beskikber of wegeret ferbinings. Gean nei oft jo nijstsjinnerynstellings goed binne en besykje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
 
 ## @name NS_ERROR_QUEUED_DELIVERY_FAILED
-12519=Der is in flater bard by it \u00F4fleverjen fan net-ferstjoerde berjochten.
+12519=Der is in flater makke by it \u00F4fleverjen fan net-ferstjoerde berjochten.
 
 ## @name NS_ERROR_SEND_FAILED
 12520=Ferstjoeren fan berjocht mislearre.
@@ -98,40 +98,40 @@
 12521=Berjocht(en) \u00F4fleverje\u2026
 
 ## @name SMTP_MESSAGE_SENT_WAITING_MAIL_REPLY
-12522=Mail: berjocht ferstjoerd; wacht op antwurd\u2026
+12522=Mail: berjocht ferstjoerd; wachtsje op antwurd\u2026
 
 ## @name SMTP_PROGRESS_MAILSENT
 12523=E-mail is mei sukses ferstjoerd.
 
 ## @name NS_ERROR_SMTP_SERVER_ERROR
-12524=Der is in flater bard by it ferstjoeren fan e-mail: SMTP-tsjinnerflater. De tsjinner antwurdde: %s. Nim kontakt op mei jo systeembehearder foar assistinsje.
+12524=Der is in flater makke by it ferstjoeren fan e-mail: SMTP-tsjinnerflater. De tsjinner antwurde: %s. Nim kontakt op mei jo systeembehearder foar assistinsje.
 
 ## @name NS_MSG_UNABLE_TO_SEND_LATER
 12525=Net slagge om jo berjocht te bewarjen om letter te ferstjoeren.
 
 ## @name NS_ERROR_COMMUNICATIONS_ERROR
-12526=Der is in kommunikaasjeflater bard: %d. Probearje op 'e ni.
+12526=Der is in kommunikaasjeflater bard: %d. Besykje op 'e nij.
 
 ## @name NS_ERROR_BUT_DONT_SHOW_ALERT
 12527=THIS IS JUST A PLACEHOLDER.  YOU SHOULD NEVER SEE THIS STRING.
 
 ## @name NS_ERROR_TCP_READ_ERROR
-12528=Der is in netwerkflater bard tiidens it \u00FBntfangen fan gegevens.  (Netwurkflater: %s)  Probearje op 'e nij te ferbinen.
+12528=Der is in netwerkflater makke by it \u00FBntfangen fan gegevens.  (Netwurkflater: %s)  Besykje op 'e nij te ferbinen.
 
 ## @name NS_ERROR_COULD_NOT_GET_USERS_MAIL_ADDRESS
-12529=Der is in flater bard by it ferstjoeren fan e-mail: it antwurdadres is \u00FBnjildich. Kontrolearje of jo e-mailadres goed is yn jo e-mailynstellings en probearje op 'e nij.
+12529=Der is in flater makke by it ferstjoeren fan e-mail: it antwurdadres is \u00FBnjildich. Kontrolearje of jo e-mailadres goed is yn jo e-mailynstellings en besykje op 'e nij.
 
 ## @name NS_ERROR_MIME_MPART_ATTACHMENT_ERROR
 12531=Bylageflater.
 
 ## @name NS_MSG_FAILED_COPY_OPERATION
-12532=It berjocht is mei sukses ferstjoerd, mar koe net kopieard wurde nei jo map Ferstjoerd.
+12532=It berjocht is mei sukses ferstjoerd, mar koe net kopiearre wurde nei jo map Ferstjoerd.
 
 ## @name NS_MSG_FAILURE_ON_OBJ_EMBED_WHILE_SAVING
 12533=Der is in probleem by it tafoegjen fan best\u00E2n %.200s yn it berjocht. Wolle jo trochgaan mei bewarjen fan it berjocht s\u00FBnder dit best\u00E2n?
 
 ## @name NS_MSG_ASSEMBLING_MESSAGE
-12534=Gearstellen e-mailynformaasje\u2026
+12534=Gearstallen e-mailynformaasje\u2026
 
 ## @name NS_MSG_GATHERING_ATTACHMENT
 12535=Bylage %s keppelje\u2026
@@ -146,13 +146,13 @@
 12538=Berjocht nei map %S kopiearje\u2026
 
 ## @name NS_MSG_START_COPY_MESSAGE_COMPLETE
-12539=Kopiearjen folt\u00F4ge.
+12539=Kopiearjen \u00FAtfierd.
 
 ## @name NS_MSG_START_COPY_MESSAGE_FAILED
 12540=Kopiearjen mislearre.
 
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
-12541=Warsk\u00F4ging! Jo steane op it punt om in berjocht fan %d bytes te ferstjoeren. Witte jo seker dat jo dit dwaan wolle?
+12541=Warsk\u00F4ging! Jo steane op it punt om in berjocht fan %d bytes te ferstjoeren. Binne jo der wis fan dat jo dit dwaan wolle?
 
 ## @name NS_SMTP_PASSWORD_PROMPT1
 12543=Fier jo wachtwurd yn foar %S:
@@ -188,80 +188,80 @@
 12559=Sjabloan-bewarjeflater
 
 ## @name NS_ERROR_SEND_FAILED_BUT_NNTP_OK
-12560=Jo berjocht wurd post yn de nijsgroep, mar net ferstjoerd nei oare \u00FBntfanger.
+12560=Jo berjocht wurdt post yn de nijsgroep, mar net ferstjoerd nei oare \u00FBntfanger.
 
 ## @name NS_MSG_ASK_TO_COMEBACK_TO_COMPOSE
 12561=Wolle jo weromgean nei it opstelfinster?
 
 ## @name NS_MSG_GENERIC_FAILURE_EXPLANATION
-12562=Gean nei of jo e-mail- & nijsgroepaccountynstellings korrekt binne en probearje op 'e nij.
+12562=Gean nei oft jo e-mail- & nijsgroepaccountynstellings goed binne en besykje op 'e nij.
 
 ## @name NS_MSG_ERROR_READING_FILE
 12563=Flater by l\u00EAzen fan best\u00E2n.
 
 ## @name NS_FOLLOWUPTO_SENDER
-12564=De skriuwer fan dit berjocht hat fersocht dat antwurden allinnich nei de skriuwer stjoerd wurde. As jo ek antwurdzje wolle nei de nijsgroep, foegje dan in nije rige ta oan it adressearingsgebiet, kies Nijsgroep yn de \u00FBntfangerslist en fier de namme fan de nijsgroep yn.
+12564=De skriuwer fan dit berjocht hat fersocht dat antwurden allinnich nei de skriuwer stjoerd wurde. As jo ek antwurdzje wolle nei de nijsgroep, foegje dan in nije rigel ta oan it adressearingsgebiet, kies Nijsgroep yn de \u00FBntfangerslist en fier de namme fan de nijsgroep yn.
 
 ## @name NS_MSG_UNDISCLOSED_RECIPIENTS
 ## LOCALIZATION NOTE: this string must be using only US_ASCII characters
 12566=net-iepenbiere \u00FBntfangers
 
 ## @name NS_MSG_ERROR_ATTACHING_FILE
-12570=Der is in flater bard by it keppeljen fan %S. Kontrolearje of jo tagong hawwe ta it best\u00E2n.
+12570=Der is in flater makke by it keppeljen fan %S. Kontrolearje of jo tagong hawwe ta it best\u00E2n.
 
 ## @name NS_MSG_ERROR_DOING_FCC
-12571=Der is in flater bard by it kopiearjen fan it berjocht nei de map Ferstjoerd. Op 'e nij probearje?
+12571=Der is in flater makke by it kopiearjen fan it berjocht nei de map Ferstjoerd. Op 'e nij besykje?
 
 ## @name NS_ERROR_SMTP_GREETING
-12572=Der is in flater bard by it ferstjoeren fan e-mail: de mailtsjinner stjoerde in foute begroeting:  %s.
+12572=Der is in flater makke by it ferstjoeren fan e-mail: de mailtsjinner stjoerde in ferkearde begroeting:  %s.
 
 ## @name NS_ERROR_SENDING_RCPT_COMMAND
-12575=Der is in flater bard by it ferstjoeren fan e-mail. De mailtsjinner antwurdde:  %s. Kontrolearje de berjocht\u00FBntfanger %2$s en probearje op 'e nij.
+12575=Der is in flater makke by it ferstjoeren fan e-mail. De mailtsjinner antwurde:  %s. Kontrolearje de berjocht\u00FBntfanger %2$s en besykje op 'e nij.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_INSECAUTH
-12579=Der is in flater bard by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. De tsjinner stipet gjin kompatibel meganisme foar \u00FBnbefeilige autentikaasje, mar jo hawwe keazen foar \u00FBnbefeilige autentikaasje. Probearje befeilige autentikaasje yn te skeakeljen of nim kontakt op mei jo tsjinstprovider.
+12579=Der is in flater makke by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. De tsjinner stipet gjin kompatibel meganisme foar \u00FBnbefeilige autentikaasje, mar jo hawwe keazen foar \u00FBnbefeilige autentikaasje. Besykje befeilige autentikaasje yn te skeakeljen of nim kontakt op mei jo tsjinstprovider.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_SECAUTH
-12580=Der is in flater bard by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. De tsjinner stipet gjin compkompatibelatibel meganisme foar befeiligde autentikaasje, mar jo hawwe keazen foar befeilige autentikaasje. Probearje befeiligde autentikaasje \u00FAt te skeakeljen of nim kontakt op mei jo tsjinstprovider.
+12580=Der is in flater makke by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. De tsjinner stipet gjin compkompatibelatibel meganisme foar befeiligde autentikaasje, mar jo hawwe keazen foar befeilige autentikaasje. Besykje befeiligde autentikaasje \u00FAt te skeakeljen of nim kontakt op mei jo tsjinstprovider.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_AUTH_NONE
-12581=Der is in flater bard by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. Dizze stipet gjin autentikaasje (SMTP-AUTH), mar jo hawwe keazen foar gebr\u00FBk fan autentikaasje. Fink \u2018Br\u00FBkersnamme en wachtwurd\u2019 \u00FAt foar dizze tsjinner of nim kontakt op mei jo tsjinstprovider.
+12581=Der is in flater makke by it ferstjoeren fan e-mail: net slagge om te autentisearjen by SMTP-tsjinner %S. Dizze stipet gjin autentikaasje (SMTP-AUTH), mar jo hawwe keazen foar gebr\u00FBk fan autentikaasje. Fink \u2018Br\u00FBkersnamme en wachtwurd\u2019 \u00FAt foar dizze tsjinner of nim kontakt op mei jo tsjinstprovider.
 
 ## @name NS_ERROR_STARTTLS_FAILED_EHLO_STARTTLS
-12582=Der is in flater bard by it ferstjoeren fan e-mail: net slagge om een befeilige ferbining te meitsjen me SMTP-tsjinner %S mei gebr\u00FBk fan STARTTLS. Skeakel STARTTLS \u00FAt foar dizze tsjinner of nim kontakt op mei jo tsjinstprovider.
+12582=Der is in flater makke by it ferstjoeren fan e-mail: net slagge om een befeilige ferbining te meitsjen me SMTP-tsjinner %S mei gebr\u00FBk fan STARTTLS. Skeakel STARTTLS \u00FAt foar dizze tsjinner of nim kontakt op mei jo tsjinstprovider.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER
-12583=Der is in flater bard by it ferstjoeren fan e-mail: net slagge om oan te melden by SMTP-tsjinner %S. De tsjinner is miskien net goed konfigureard. Gean nei of jo SMTP-tsjinnerynstellings goed binne en probearje op 'e nij.
+12583=Der is in flater makke by it ferstjoeren fan e-mail: net slagge om oan te melden by SMTP-tsjinner %S. De tsjinner is miskien net goed konfigureard. Gean nei of jo SMTP-tsjinnerynstellings goed binne en besykje op 'e nij.
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
-12584=Der is in flater bard by it ferstjoeren fan e-mail: koe gjin wachtwurd krije foar %S. It berjocht is net ferstjoerd.
+12584=Der is in flater makke by it ferstjoeren fan e-mail: koe gjin wachtwurd krije foar %S. It berjocht is net ferstjoerd.
 
 ## @name NS_SMTP_PASSWORD_PROMPT_TITLE
 12585=SMTP-tsjinnerwachtwurd nedich
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
-12586=De grutte fan it berjocht dat jo ferstjoere wolle is grutter as in tydlike-gruttelimiet fan de tsjinner. It berjocht is net ferstjoerd; probearje de berjochtgrutte lytser te meitsjen of wacht even en probearje op 'e nij. De tsjinner antwurdde:  %s.
+12586=It berjocht dat jo ferstjoere wolle is grutter as in tydlike-gruttelimyt fan de tsjinner. It berjocht is net ferstjoerd; besykje it berjocht lytser te meitsjen of wachtsje even en besykje it op 'e nij. De tsjinner antwurde:  %s.
 
 ## @name NS_ERROR_SMTP_PERM_SIZE_EXCEEDED_1
-12587=De grutte fan it berjocht dat jo ferstjoere wolle is grutter as de globale-gruttelimiet (%d bytes) fan de tsjinner. It berjocht is net ferstjoerd; probearje de berjochtgrutte lytser te meitsjen en probearje op 'e nij.
+12587=De grutte fan it berjocht dat jo ferstjoere wolle is grutter as de globale-gruttelimiet (%d bytes) fan de tsjinner. It berjocht is net ferstjoerd; besykje de berjochtgrutte lytser te meitsjen en besykje op 'e nij.
 
 ## @name NS_ERROR_SMTP_PERM_SIZE_EXCEEDED_2
-12588=De grutte fan it berjocht dat jo ferstjoere wolle is grutter as de globale-gruttelimiet fan de tsjinner. It berjocht is net ferstjoerd; probearje de berjochtgrutte lytser te meitsjen en probearje op 'e nij. De tsjinner antwurdde:  %s.
+12588=It berjocht dat jo ferstjoere wolle is grutter as de globale-gruttelimyt fan de tsjinner. It berjocht is net ferstjoerd; besykje it berjocht lytser te meitsjen en besykje it op 'e nij. De tsjinner antwurdde:  %s.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_UNKNOWN_SERVER
-12589=Der is in flater bard by it ferstjoeren fan e-mail: SMTP-tsjinner %S is \u00FBnbekend. De tsjinner is miskien net goed konfigurearre. Gean nei of jo SMTP-tsjinnerynstellings goed binne en probearje op 'e nij.
+12589=Der is in flater makke by it ferstjoeren fan e-mail: SMTP-tsjinner %S is \u00FBnbekend. De tsjinner is miskien net goed konfigurearre. Gean nei of jo SMTP-tsjinnerynstellings goed binne en besykje op 'e nij.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_REFUSED                                
-12590=It berjocht koe net ferstjoerd wurde, omdat it ferbinen mei SMTP-tsjinner %S mislearre is. De tsjinner is miskien net beskikber of wegeret SMTP-ferbindings. Gean nei of jo SMTP-tsjinnerynstellings goed binne en probearje op 'e nij, of nim kontakt op mei de tsjinnerbehearder.
+12590=It berjocht koe net ferstjoerd wurde, omdat it ferbinen mei SMTP-tsjinner %S mislearre is. De tsjinner is miskien net beskikber of wegeret SMTP-ferbindings. Gean nei of jo SMTP-tsjinnerynstellings goed binne en besykje op 'e nij, of nim kontakt op mei de tsjinnerbehearder.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_INTERRUPTED
-12591=It berjocht koe net ferstjoerd wurde, omdat de ferbining mei de SMTP-tsjinner %S ferbrutsen wurde yn it midden fan de transaksje. Probearje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
+12591=It berjocht koe net ferstjoerd wurde, omdat de ferbining mei de SMTP-tsjinner %S ferbrutsen waard yn it midden fan de transaksje. Besykje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_TIMEOUT
-12592=It berjocht koe net ferstjoerd wurde, omdat de wachttiid foar de ferbining mei de SMTP-tsjinner %S ferr\u00FBn is. Probearje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
+12592=It berjocht koe net ferstjoerd wurde, omdat de wachttiid foar de ferbining mei de SMTP-tsjinner %S ferr\u00FBn is. Besykje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_UNKNOWN_REASON
-12593=It berjocht koe net ferstjoerd wurde fia de SMTP-server %S om in \u00FBnbekende reden. Gean nei of jo SMTP-tsjinnernstellings goed binne en probearje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
+12593=It berjocht koe net ferstjoerd wurde fia de SMTP-server %S om in \u00FBnbekende reden. Gean nei oft jo SMTP-tsjinnernstellings goed binne en besykje op 'e nij, of nim kontakt op mei jo netwurkbehearder.
 
 ## Strings use for the save message dialog shown when the user close a message compose window
 saveDlogTitle=Berjocht bewarje
@@ -276,15 +276,15 @@ windowTitlePrefix=Nij berjocht:
 
 ## String used by the dialog that ask the user to enter a subject
 sendMsgTitle=Berjocht ferstjoere
-subjectDlogMessage=Jo hawwe gjin \u00FBnderwerp fermeld foar dit berjocht. As jo in \u00FBnderwerp wolle, fier it dan no yn.
+subjectDlogMessage=Jo hawwe gjin \u00FBnderwerp opj\u00FBn foar dit berjocht. As jo in \u00FBnderwerp wolle, fier it dan no yn.
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=Dizze account stipet allinnich e-mail\u00FBntfangers. Trochgean sil nijsgroepen negearje.
 
 #String used by the alert that tells the user an e-mail address is invalid
-addressInvalid=%1$S is gjin jildich e-mailadres, omdat it net de foarm br\u00FBker@host hat. Jo moatte dit korrigearje foardat jo de e-mail ferstjoere.
+addressInvalid=%1$S is gjin jildich e-mailadres, omdat it net de foarm br\u00FBker@host hat. Jo moatte dit ferbetterje foardat jo de e-mail ferstjoere.
 ## String used by the dialog that ask the user to attach a web page
-attachPageDlogTitle=Spesificearje in lokaasje om te keppeljen
+attachPageDlogTitle=Spesifisearje in lokaasje om te keppeljen
 attachPageDlogMessage=Webstee (URL):
 
 ## String used for attachment pretty name, when attachment is a message
@@ -295,7 +295,7 @@ partAttachmentSafeName=Keppele berjochtgedielte
 ## String used by the Initialization Error dialog
 initErrorDlogTitle=Berjochten opstelle
 ## LOCALIZATION NOTE (initErrorDlogMessage): %1$s will be replaced by the error string.  do not translate \n
-initErrorDlogMessage=Der is in flater bard tiidens it meitsjen fan it berjochtopstelfinster. Probearje op 'e nij.\n%1$s
+initErrorDlogMessage=Der is in flater makke by it meitsjen fan it berjochtopstelfinster. Besykje op 'e nij.\n%1$s
 
 ## Strings used by Save as Draft/Template dialog
 SaveDialogTitle=Berjocht bewarje
@@ -306,13 +306,13 @@ CheckMsg=Dit dialoochfinster net mear sjen litte.
 ## Strings used by prompt when Quitting while in progress
 quitComposeWindowTitle=Berjocht ferstjoere
 ## LOCALIZATION NOTE (quitComposeWindowMessage): don't translate \n
-quitComposeWindowMessage2=%1$S is op dit stui dwaande mei it ferstjoeren fan in berjocht.\nWolle jo wachte oant it berjocht ferstjoerd is foardat jo \u00F4fslute of no \u00F4fslute?
+quitComposeWindowMessage2=%1$S is op dit stuit dwaande mei it ferstjoeren fan in berjocht.\nWolle jo wachtsje oant it berjocht ferstjoerd is foardat jo \u00F4fslute of no \u00F4fslute?
 quitComposeWindowQuitButtonLabel2=&Ofslute
-quitComposeWindowWaitButtonLabel2=&Wachte
+quitComposeWindowWaitButtonLabel2=&Wachtsje
 
 ## Strings used by prompt for Ctrl-Enter check before sending message
 sendMessageCheckWindowTitle=Berjocht ferstjoere
-sendMessageCheckLabel=Witte jo seker dat jo dit berjocht ferstjoere wolle?
+sendMessageCheckLabel=Binne jo der wis fan dat jo dit berjocht ferstjoere wolle?
 sendMessageCheckSendButtonLabel=Ferstjoere
 
 ## reply header in composeMsg
@@ -322,8 +322,8 @@ mailnews.reply_header_ondate=Op %s
 
 ## reply header in composeMsg
 ## user specified 
-mailnews.reply_header_originalmessage=-------- Origineel berjocht --------
+mailnews.reply_header_originalmessage=-------- Oarspronklik berjocht --------
 
 ## Strings used by the rename attachment dialog
-renameAttachmentTitle=Bylage werneame
+renameAttachmentTitle=Bylage omneame
 renameAttachmentMessage=Nije bylagenamme:
