bug 412298 - new security string for bug 408432, change to new string Kadir and me agreed on

--- a/de/security/manager/chrome/pipnss/pipnss.properties
+++ b/de/security/manager/chrome/pipnss/pipnss.properties
@@ -352,7 +352,7 @@ certErrorMismatch=Das Zertifikat gilt nicht für den Namen %S.
 certErrorMismatchSingle2=Das Zertifikat gilt nur für <a id="cert_domain_link" title="%1$S">%1$S</a>.
 certErrorMismatchSinglePlain=Das Zertifikat gilt nur für %S.
 certErrorMismatchMultiple=Das Zertifikat gilt nur für folgende Namen:
-certErrorMismatchNoNames=Dieses Zertifikat gilt für keine Server-Namen.
+certErrorMismatchNoNames=Es wurden keine Server-Namen gefunden, für die dieses Zertifikat gültig ist.
 
 certErrorExpired=Das Zertifikat ist am %S abgelaufen.
 certErrorNotYetValid=Das Zertifikat gilt erst ab %S.
