--- a/et/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/et/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -27,8 +27,8 @@ offlineCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
 offlineCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad võrguta olekusse minna?
 offlineCancelDownloadsAlertMsg=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad võrguta olekusse minna?
 enterPrivateBrowsingCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
-enterPrivateBrowsingCancelDownloadsAlertMsg=Kui sa lähed nüüd privaatse veebilehtisemise olekusse, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahtad lülituda privaatse veebilehitsemise olekusse?
-enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd privaatse veebilehtisemise olekusse, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahtad lülituda privaatse veebilehitsemise olekusse?
+enterPrivateBrowsingCancelDownloadsAlertMsg=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
+enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
 leavePrivateBrowsingCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
 leavePrivateBrowsingCancelDownloadsAlertMsg=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad privaatse veebilehitsemise olekust väljuda?
 leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad privaatse veebilehitsemise olekust väljuda?
@@ -37,7 +37,7 @@ cancelDownloadsOKTextMultiple=Katkesta %S allalaadimist
 dontQuitButtonWin=Ära välju
 dontQuitButtonMac=Ära välju
 dontGoOfflineButton=Jää võrgurežiimi
-dontEnterPrivateBrowsingButton=Ära lülitu privaatse veebilehtisemise olekusse
+dontEnterPrivateBrowsingButton=Ära lülitu privaatse veebilehitsemise olekusse
 dontLeavePrivateBrowsingButton=Jää privaatse veebilehitsemise olekusse
 downloadsCompleteTitle=Allalaadimised lõpetatud
 downloadsCompleteMsg=Kõikide failide allalaadimine on lõppenud.
