--- a/et/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/et/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -114,4 +114,4 @@ newUpdatesAvailableMsg=Sinu lisade jaoks on saadaval uuendusi.
 
 searchResults=Vaata kõiki tulemusi (%S)
 
-eulaHeader=%S nõuab, et sa nõustuksid lõppkasutaja litentsilepinguga, enne kui saad jätkata lisa paigaldamisega:
+eulaHeader=%S nõuab, et sa nõustuksid lõppkasutaja litsentsilepinguga, enne kui saad jätkata lisa paigaldamisega:
