L10n for: Bug 460694 -  Make use of emptytext attribute in search textboxes

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -326,8 +326,8 @@ attachmentDisplayNameFormat=%S %S
 103=Nie można połączyć się z serwerem %S; połączenie zostało odrzucone.
 104=Przekroczono limit czasu połączenia z serwerem %S.
 
-recipientSearchCriteria=Temat lub adresat zawiera:
-fromSearchCriteria=Temat lub nadawca zawiera:
+searchRecipientEmptyText=Szukaj w tematach i adresatach
+searchFromEmptyText=Szukaj w tematach i nadawcach
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message=Odebrano %1$S nową wiadomość
