it is a bad idea to localize command keys... (suite,venkman)

--- a/pl/extensions/venkman/chrome/venkman.properties
+++ b/pl/extensions/venkman/chrome/venkman.properties
@@ -719,7 +719,7 @@ cmd.mozilla-help.label=&Spis treści
 cmd.mozilla-help.help=Wyświetla spis treści pomocy SeaMonkey.
 
 cmd.next.label=&Przekrocz
-cmd.next.key=VK_F10
+cmd.next.key=VK_F12
 cmd.next.tip=Pomiń debugowanie funkcji
 cmd.next.help=Wykonuje instrukcje zawarte w następnym wierszu skryptu. Jeżeli następny wiersz zawiera wywołanie funkcji, wykonanie funkcji śledzone jest jako pojedyncza instrukcja.
 
@@ -901,7 +901,7 @@ cmd.tmode.help=Ustala domyślną czynność, jaka zostanie wykonana, gdy w debug
 
 cmd.tm-break.label=Zatrzymaj, gdy wystąpi &wyjątek
 cmd.tm-cycle.label=Przełącz tryb obsługi wyjątków
-cmd.tm-cycle.key=accel t
+cmd.tm-cycle.key=accel T
 cmd.tm-ignore.label=&Ignoruj wyjątki
 cmd.tm-trace.label=Ś&ledź wyjątki
 
