--- a/sk/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/sk/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -14,7 +14,7 @@ installSuccess=Inštalácia úspešne dokončená.
 installWaiting=Čakajte…
 droppedInWarning=V priečinku rozšírení boli nájdené nasledovné položky. Chcete ich nainštalovať?
 updateNotificationTitle=Boli nájdené aktualizácie doplnkov
-updateNotificationText=%S našiel aktualizáciu pre 1 z vašich doplnkov
+updateNotificationText=%S našiel aktualizáciu pre jeden z vašich doplnkov
 multipleUpdateNotificationText=%S našiel aktualizácie pre niektoré vaše doplnky (celkom %S)
 
 uninstallButton=Odinštalovať
