Bug 460694 - Make use of emptytext attribute in search textboxes (mailNews part + some additional fixes). r=Mnyromyr+Standard8(Addressbook), sr=Neil, a=KaiRo (OK from Standard8 to land changes in files shared with TB).

--- a/nl/suite/chrome/mailnews/messenger.properties
+++ b/nl/suite/chrome/mailnews/messenger.properties
@@ -332,8 +332,8 @@ attachmentDisplayNameFormat = %S %S
 103 = Kon niet verbinden met server %S; de verbinding werd geweigerd
 104 = Wachttijd voor verbinding met server %S is verlopen.
 
-recipientSearchCriteria = Onderwerp of geadresseerde bevat:
-fromSearchCriteria = Onderwerp of afzender bevat:
+searchRecipientEmptyText=Onderwerp en geadresseerde doorzoeken
+searchFromEmptyText=Onderwerp en afzender doorzoeken
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message = heeft %1$S nieuw bericht
