--- a/fr/mail/installer/custom.properties
+++ b/fr/mail/installer/custom.properties
@@ -73,8 +73,8 @@ ICONS_DESKTOP=Sur mon &Bureau
 ICONS_STARTMENU=Dans mon dossier « &Programmes » du « Menu démarrer »
 ICONS_QUICKLAUNCH=Dans ma « Barre de &lancement rapide »
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName doit être fermé pour procéder à l'installation.\n\nVeuillez fermer $BrandShortName pour continuer.
-WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandFullName doit être fermé pour procéder à la désinstallation.\n\nVeuillez fermer $BrandFullName pour continuer.
-WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandFullName est déjà en cours d'exécution.\n\nVeuillez fermer $BrandFullName avant de lancer la version que vous venez d'installer.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName doit être fermé pour procéder à la désinstallation.\n\nVeuillez fermer $BrandShortName pour continuer.
+WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName est déjà en cours d'exécution.\n\nVeuillez fermer $BrandShortName avant de lancer la version que vous venez d'installer.
 WARN_WRITE_ACCESS=Vous n'avez pas de permission d'écriture sur le répertoire d'installation.\n\nCliquez sur « OK » pour sélectionner un répertoire différent.
 WARN_DISK_SPACE=Il n'y a pas suffisamment d'espace disque disponible pour faire l'installation à cet emplacement.\n\nCliquez sur « OK » pour sélectionner un emplacement différent.
 WARN_MIN_SUPPORTED_OS_MSG=Nous sommes désolés, mais $BrandShortName ne peut pas être installé. Cette version de $BrandShortName nécessite ${MinSupportedVer} ou plus récent.
