de string changes for bug 460694

--- a/de/suite/chrome/mailnews/messenger.properties
+++ b/de/suite/chrome/mailnews/messenger.properties
@@ -333,8 +333,8 @@ attachmentDisplayNameFormat=%S %S
 103=Konnte nicht mit dem Server %S verbinden; die Verbindung wurde verweigert.
 104=Zeitüberschreitung der Verbindung mit Server %S.
 
-recipientSearchCriteria=Betreff oder Empfänger enthält:
-fromSearchCriteria=Betreff oder Von enthält:
+searchRecipientEmptyText=Betreff und Empfänger durchsuchen
+searchFromEmptyText=Betreff und Von durchsuchen
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message=hat %1$S neue Nachricht
