--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -332,10 +332,10 @@ attachmentDisplayNameFormat=%S %S
 103=Klarte ikke koble til tjeneren %S; tilkoblingen ble avslått.
 104=Tilkobling til tjeneren %S fikk tidsavbrudd.
 
-recipientSearchCriteria=Emne eller mottaker inneholder\:
-fromSearchCriteria=Emne eller fra inneholder\:
+searchRecipientEmptyText=Søk i emne og mottaker
+searchFromEmptyText=Søk i emne og fra
 
-# LOCALIZATION NOTES(biffNotification): %1$S is the number of new messages  
+# LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages  
 biffNotification_message=har %1$S nye meldinger
 biffNotification_messages=har %1$S nye meldinger
 
