--- a/fi/mail/chrome/messenger/importMsgs.properties
+++ b/fi/mail/chrome/messenger/importMsgs.properties
@@ -274,9 +274,14 @@
 2134=Oma 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Muistiinpanot
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Näyttönimi
 
 #Error strings
 ImportAlreadyInProgress=Tuonti on parhaillaan käynnissä. Yritä uudelleen, kun tuonti on valmis.
