--- a/fi/mail/installer/custom.properties
+++ b/fi/mail/installer/custom.properties
@@ -56,6 +56,7 @@ CONTEXT_SAFE_MODE=$BrandShortNamein &vikasietotila
 SAFE_MODE=vikasietotila
 OPTIONS_PAGE_TITLE=Asennustyyppi
 OPTIONS_PAGE_SUBTITLE=Valitse asennusvaihtoehdot
+OPTIONS_MAKE_DEFAULT=&Aseta $BrandShortName järjestelmän oletusähköpostiohjelmaksi
 SHORTCUTS_PAGE_TITLE=Aseta pikakuvakkeet
 SHORTCUTS_PAGE_SUBTITLE=Luo pikakuvakkeet
 SUMMARY_PAGE_TITLE=Yhteenveto
@@ -63,6 +64,7 @@ SUMMARY_PAGE_SUBTITLE=Valmis asentamaan $BrandShortNamein
 SUMMARY_INSTALLED_TO=$BrandShortName asennetaan seuraavaan kohteeseen:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Tietokoneen käynnistäminen uudelleen voi olla tarpeen, jotta asennus voidaan viimeistellä.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Tietokoneen käynnistäminen uudelleen voi olla tarpeen, jotta ohjelman poisto voidaan viimeistellä.
+SUMMARY_MAKE_DEFAULT=$BrandShortName asetetaan järjestelmäsi oletussähköpostiohjelmaksi.
 SUMMARY_CLICK=Jatka valitsemalla Asenna.
 SURVEY_TEXT=&Kerro, mitä mieltä olet ohjelmasta
 LAUNCH_TEXT=&Käynnistä $BrandFullName
