Thunderbird beta preparations. Still lots of strings to fix.

--- a/uk/mail/chrome/messenger/messenger.properties
+++ b/uk/mail/chrome/messenger/messenger.properties
@@ -446,3 +446,16 @@ smtpServer-ConnectionSecurityType-0=None
 smtpServer-ConnectionSecurityType-1=STARTTLS, if available
 smtpServer-ConnectionSecurityType-2=STARTTLS
 smtpServer-ConnectionSecurityType-3=SSL/TLS
+
+# FIXME: localize
+glodaSearch_results_why_attachment=Attachment
+glodaSearch_results_why_body=Body
+glodaSearch_results_why_contact=Contact
+glodaSearch_results_why_subject=Subject
+macBiffNotification_message=%1$S new message from %2$S.
+macBiffNotification_messages=%1$S new messages from %2$S.
+macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+macBiffNotification_messages=%1$S new messages from %2$S.
+macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+macBiffNotification_messages_extra=%1$S new messages from %2$S and %3$S more.
+macBiffNotification_separator=,\u0020
