--- a/uk/mail/installer/custom.properties
+++ b/uk/mail/installer/custom.properties
@@ -105,3 +105,7 @@ REG_APP_DESC=${BrandShortName} — це потужна поштова прогр
 
 # FIXME: localize
 WARN_MIN_SUPPORTED_OS_MSG=Вибачте, встановити $BrandShortName неможливо. $BrandShortName вимагає${MinSupportedVer} чи новішу версію.
+
+# FIXME: localize
+OPTIONS_MAKE_DEFAULT=&Use $BrandShortName as my default mail application
+SUMMARY_MAKE_DEFAULT=$BrandShortName will be set as your default mail application.
