--- a/fr/suite/chrome/mailnews/messenger.properties
+++ b/fr/suite/chrome/mailnews/messenger.properties
@@ -334,8 +334,8 @@ attachmentDisplayNameFormat=%S %S
 103=Le serveur %S a refusé la connexion.
 104=Temps limite dépassé lors de la connexion au serveur %S.
 
-recipientSearchCriteria=Le sujet ou le destinataire contient :
-fromSearchCriteria=Le sujet ou l'expéditeur contient :
+searchRecipientEmptyText=Rechercher dans le sujet ou le destinataire
+searchFromEmptyText=Rechercher dans le sujet et l'expéditeur
 
 # LOCALIZATION NOTE(biffNotification): %1$S is the number of new messages
 biffNotification_message=a %1$S nouveau message.
